# SP-Python-Essentials-DP

./: .gitignore  .gitignore.orig  Doxyfile  Env_Path.txt  README.md
Module 2/: 2.1.1.1.py  2.1.1.18_LAB_The_print()_function.py  2.1.1.19_LAB_Formatting_the_output.py  2.2.1.11_LAB_Python_literals_-_strings.py  2.3.1.8.py  2.4.1.10.py  2.4.1.9.py  2.5.1.2.py  Cisco.Python_Lab_2.4.1.10.py  Cisco.Python_Lab_2.4.1.7.py  Cisco.Python_Lab_2.4.1.9.py  Cisco.Python_Lab_2.5.1.2.py  Cisco.Python_Lab_2.6.1.10.py  Cisco.Python_Lab_2.6.1.11.py  Cisco.Python_Lab_2.6.1.9.py
Module 3/: 3.1.1.4_LAB_Questions_and_answers.py  3.4.1.13 LAB The basics of lists_the Beatles.py  3.4.1.6 LAB The basics of lists.py  3.6.1.9 LAB Operating with lists.py  Cisco.Python_Lab_3.1.1.10.py  Cisco.Python_Lab_3.1.1.4.py  Cisco.Python_Lab_3.2.1.10.py  Cisco.Python_Lab_3.2.1.11.py  Cisco.Python_Lab_3.2.1.14.py  Cisco.Python_Lab_3.2.1.15.py  Cisco.Python_Lab_3.2.1.3.py  Cisco.Python_Lab_3.2.1.6.py  Cisco.Python_Lab_3.2.1.9.py  bignumber.txt
Module 4/: 4.3.1.6 LAB A leap year writing your own functions.py  4.3.1.7 LAB How many days writing and using your own functions.py  4.3.1.8 LAB Day of the year writing and using your own functions.py  4.3.1.9 LAB Prime numbers - how to find them .py  Final.Tic.Tac.Toe.py  Python.Lab.4.3.1.10.py  qz4.py
c++/CEP1-MOD1T/: CEP1-MOD1T.cpp  CEP1-MOD1T.h  CMakeLists.txt
c++/CEP1-MOD2T/: CEP1-MOD2T.cpp  CEP1-MOD2T.h  CMakeLists.txt
c++/CEP1-MOD3Ts/: CEP1-MOD3Ts.cpp  CEP1-MOD3Ts.h  CMakeLists.txt
c++/CEP1-MOD4T/: CEP1-MOD4T-1.h  CEP1-MOD4T.cpp  CEP1-MOD4T.h  CMakeLists.txt
c++/cpp-ess1-mod2/: CMakeLists.txt  cpp-ess1-mod2.cpp  cpp-ess1-mod2.h
c++/cpp-ess1-mod3/: CMakeLists.txt  cpp-ess1-mod3.cpp  cpp-ess1-mod3.h
c++/module-2-quiz-2/: CMakeLists.txt  module-2-quiz-2.cpp  module-2-quiz-2.h
c++/quiz 2/quiz 2/: CMakeLists.txt  quiz 2.cpp  quiz 2.h
docs/: 1_82_81_85_8py.html  1_82_81_85_8py_source.html  2_81_81_818___l_a_b___the__print_07_08__function_8py.html  2_81_81_818___l_a_b___the__print_07_08__function_8py_source.html  2_81_81_819___l_a_b___formatting__the__output_8py.html  2_81_81_819___l_a_b___formatting__the__output_8py_source.html  2_81_81_81_8py.html  2_81_81_81_8py_source.html  2_82_81_811___l_a_b___python__literals__-__strings_8py.html  2_82_81_811___l_a_b___python__literals__-__strings_8py_source.html  2_83_81_88_8py.html  2_83_81_88_8py_source.html  2_84_81_810_8py.html  2_84_81_810_8py_source.html  2_84_81_89_8py.html  2_84_81_89_8py.js  2_84_81_89_8py_source.html  2_85_81_82_8py.html  2_85_81_82_8py_source.html  3_81_81_84___l_a_b___questions__and__answers_8py.html  3_81_81_84___l_a_b___questions__and__answers_8py_source.html  3_84_81_813_01_l_a_b_01_the_01basics_01of_01lists__the_01_beatles_8py.html  3_84_81_813_01_l_a_b_01_the_01basics_01of_01lists__the_01_beatles_8py_source.html  4_83_81_86_01_l_a_b_01_a_01leap_01year_01writing_01your_01own_01functions_8py.html  4_83_81_86_01_l_a_b_01_a_01leap_01year_01writing_01your_01own_01functions_8py.js  4_83_81_86_01_l_a_b_01_a_01leap_01year_01writing_01your_01own_01functions_8py_source.html  4_83_81_87_01_l_a_b_01_how_01many_01days_01writing_01and_01using_01your_01own_01functions_8py.html  4_83_81_87_01_l_a_b_01_how_01many_01days_01writing_01and_01using_01your_01own_01functions_8py_source.html  4_83_81_88_01_l_a_b_01_day_01of_01the_01year_01writing_01and_01using_01your_01own_01functions_8py.html  4_83_81_88_01_l_a_b_01_day_01of_01the_01year_01writing_01and_01using_01your_01own_01functions_8py_source.html  _c_e_p1-_m_o_d1_t_8cpp.js  _c_e_p1-_m_o_d1_t_8cpp_source.html  (+229 more)
(+633 files in other folders)
