# CMakeList.txt : CMake project for CEP1-MOD1T, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CEP1-MOD1T")

# Add source to this project's executable.
add_executable (CEP1-MOD1T "CEP1-MOD1T.cpp" "CEP1-MOD1T.h")

# TODO: Add tests and install targets if needed.
