# CMakeList.txt : CMake project for module-2-quiz-2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("module-2-quiz-2")

# Add source to this project's executable.
add_executable (module-2-quiz-2 "module-2-quiz-2.cpp" "module-2-quiz-2.h")

# TODO: Add tests and install targets if needed.
