# CMakeList.txt : CMake project for quiz 2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("quiz 2")

# Add source to this project's executable.
add_executable (CMakeTarget "quiz 2.cpp" "quiz 2.h")

# TODO: Add tests and install targets if needed.
